istio-in-action/ch9/my-work/ra-spring-gateway.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-token
  namespace: istioinaction
spec:
  selector:
    matchLabels:
      app: mff-spring-cloud-gateway
  jwtRules:
    - issuer: "http://35.160.20.139/auth/realms/mff"
      jwksUri: "http://35.160.20.139/auth/realms/mff/protocol/openid-connect/certs"
      # putting just the domain name doesn't work!
      # TODO figure out why -> BECAUSE TIMEOUT DUE TO NETTY 5 seconds
      forwardOriginalToken: true
      # don't strip token, keep it as we need to authorize with each envoy proxy for each service
