istio-in-action/ch9/my-work/dep-spring-cloud-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: mff-spring-cloud-gateway
  labels:
    app: mff-spring-cloud-gateway
    service: mff-spring-cloud-gateway
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: mff-spring-cloud-gateway
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mff-spring-cloud-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mff-spring-cloud-gateway
      version: v1
  template:
    metadata:
      labels:
        app: mff-spring-cloud-gateway
        version: v1
    spec:
      serviceAccountName: mff-spring-cloud-gateway
      containers:
      - image: docker.io/library/mff-spring-cloud-gateway:latest
        imagePullPolicy: IfNotPresent
        name: mff-spring-cloud-gateway
        ports:
        - containerPort: 80
