istio-in-action/ch9/my-work/service-and-endpoint-for-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: keycloak
subsets:
  - addresses:
      - ip: 35.160.20.139
    ports:
      - port: 80
