istio-in-action/ch9/my-work/SERVICE_ENTRY_FOR_EXT_AUTHZ.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-authz-grpc-local
spec:
  hosts:
    - "external-authz-grpc.local" # The service name to be used in the extension provider in the mesh config.
  endpoints:
    - address: "127.0.0.1"
  ports:
    - name: grpc
      number: 9191 # The port number to be used in the extension provider in the mesh config.
      protocol: GRPC
  resolution: STATIC
