istio-in-action/ch9/my-work/ef-get-jwt-from-cookie.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: get-jwt-from-cookie
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
      patch:
        operation: INSERT_FIRST
        value:
          name: envoy.lua
          typed_config:
            "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
            inlineCode: | # TODO double check that it does not affect response 
              function envoy_on_request(request_handle)
                local originalCookie = request_handle:headers():get("Cookie"):match("ACCESS_TOKEN=.*;")
                if originalCookie then
                  request_handle:logWarn("Adding header Set-Cookie with content " .. originalCookie)
                  
                  originalCookie = originalCookie:gsub("ACCESS_TOKEN=", "")
                  request_handle:headers():add("Authorization", "Bearer " .. originalCookie)
                  
                  request_handle:logWarn("ADDED header Authorization with content " .. originalCookie)
                end 
                end
