istio-in-action/ch9/my-work/ap-allow-ingress-gateway-to-access-httpbin.yaml
apiVersion: "security.istio.io/v1beta1"
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-gateway-to-access-httpbin
  namespace: istioinaction
spec:
  selector:
    matchLabels:
      app: httpbin
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
      to:
        - operation:
            hosts: ["httpbin.io"]
#TODO where I got so far:
# Deny all policy do have every single service deny everything
# Allow ingress gateway to access a specific svc / all services
# Allow user to access ingress gateway for specific host, or really, all hosts it's fine as it's like API Gateway

# OR
# Deny all policies for gateway only
# Allow user to access ingress gateway for specific host, or really, all hosts it's fine as it's like API Gateway
