istio-in-action/ch9/my-work/ap-allow-spring-cloud-gateway-to-access-httpbin.yaml
apiVersion: "security.istio.io/v1beta1"
kind: AuthorizationPolicy
metadata:
  name: allow-spring-cloud-gateway-to-access-httpbin
  namespace: istioinaction
spec:
  selector:
    matchLabels:
      app: httpbin
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istioinaction/sa/mff-spring-cloud-gateway"]
#      to:
#        - operation:
#            hosts: ["httpbin.io"]
