istio-in-action/ch9/my-work/ap-catch-all-deny.yaml
apiVersion: "security.istio.io/v1beta1"
kind: AuthorizationPolicy
metadata:
  name: default # catch-all policy named default
  namespace: istio-system # istio-system name space = meshwide
spec: {} # empty spec = deny all requests
