istio-in-action/ch9/my-work/ap-httpbin-allow-public-api.yaml
apiVersion: "security.istio.io/v1beta1"
kind: AuthorizationPolicy
metadata:
  name: httpbin-allow-public-api-access
  namespace: istioinaction
spec:
  selector:
    matchLabels:
      app: httpbin
  rules:
    - to:
        - operation:
            methods: ["GET"]
            paths: ["/anything/api/public"]
  action: ALLOW # default is allow, but its good to be explicit
