istio-in-action/ch9/my-work/ap-public-api.yaml
apiVersion: "security.istio.io/v1beta1"
kind: AuthorizationPolicy
metadata:
  name: httpbin-allow-public-api-access
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  rules:
    - to:
        - operation:
            methods: ["GET"]
            hosts: ["httpbin.io"]
            paths: ["/anything/api/public*"]
