istio-in-action/ch9/my-work/ext-authz-ap.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ext-authz
spec:
  selector:
    matchLabels:
      app: httpbin
  action: CUSTOM
  provider:
    # The provider name must match the extension provider defined in the mesh config.
    # You can also replace this with sample-ext-authz-http to test the other external authorizer definition.
    name: sample-ext-authz-http
  rules:
    # The rules specify when to trigger the external authorizer.
    - to:
        - operation:
            paths: ["*"] # /subsidies/1
